--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost/localiza_app
 db.user=postgres
-db.password=Loc2016
+db.password=123
