--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 buildscript {
+	ext {
+         querydslGeneratedSourcesDir = file("src/main/generated")
+         querydslInputEntityPackage = "com.edgardo.localiza.model"
+       querydslVersion = "3.7.2"
+    
+       hibernateJpaApiVersion = "4.3.1.Final"
+    }
     repositories {
         maven { url "http://repo.spring.io/libs-milestone"
         		url "http://repo.spring.io/milestone"}
@@ -7,6 +14,9 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:0.5.0.M6")
+        classpath("com.mysema.querydsl:querydsl-codegen:${querydslVersion}")
+         classpath("org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final")
+         classpath files("${buildDir}/classes/main")
     }
 }
 
@@ -37,6 +47,19 @@ task "createSrcDirs" << {
 	sourceSets*.java.srcDirs*.each { it.mkdirs() }
 	sourceSets*.resources.srcDirs*.each { it.mkdirs() }
 }*/
+
+task generateQueryDSL(group: 'build', description: 'Generate QueryDSL query types from compiled entity types') {
+        new com.mysema.query.codegen.GenericExporter().with {
+            setKeywords(com.mysema.query.codegen.Keywords.JPA)
+            setEntityAnnotation(javax.persistence.Entity.class)
+            setEmbeddableAnnotation(javax.persistence.Embeddable.class)
+            setEmbeddedAnnotation(javax.persistence.Embedded.class)
+            setSupertypeAnnotation(javax.persistence.MappedSuperclass.class)
+            setSkipAnnotation(javax.persistence.Transient.class)
+            setTargetFolder(querydslGeneratedSourcesDir)
+            export(querydslInputEntityPackage)
+        }
+    }
 
 dependencies {
 
@@ -93,6 +116,14 @@ dependencies {
     compile("org.hibernate:hibernate-entitymanager:4.3.1.Final")
     compile('org.hibernate:hibernate-jpamodelgen:4.3.4.Final')
     
+    
+    //Query DSL
+    compile('com.mysema.querydsl:querydsl-jpa:3.7.2')
+    compile('com.mysema.querydsl:querydsl-apt:3.7.2')
+    compile('com.querydsl:querydsl-codegen:4.1.0')
+    
+    
+    
     //DataBase
     compile("com.jolbox:bonecp-spring:0.8.0.RELEASE")
     compile("com.h2database:h2:1.3.172")
@@ -142,7 +173,7 @@ task wrapper(type: Wrapper) {
 sourceSets {
     main {
         java {
-            srcDirs = ["src/main/java", "src/main/resources", "src/main/webapp"]
+            srcDirs = ["src/main/java", "src/main/resources", "src/main/webapp", "src/main/generated"]
             
         }
     }
