--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+    	classpath group: 'org.zeroturnaround', name: 'gradle-jrebel-plugin', version: '1.1.2'
         classpath("org.springframework.boot:spring-boot-gradle-plugin:0.5.0.M6")
         classpath("com.mysema.querydsl:querydsl-codegen:${querydslVersion}")
          classpath("org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final")
@@ -24,7 +25,7 @@ repositories {
     mavenCentral()
     maven { url 'http://repo.springsource.org/libs-milestone' }
 }
-
+apply plugin: 'rebel'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'eclipse-wtp'
